--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
     <link rel="stylesheet" media="screen and (max-width: 800px)" href="CSS/phone.css">
-    <link rel="stylesheet" media="screen and (min-width: 800px)" href="css/style.css">
+    <link rel="stylesheet" media="screen and (min-width: 800px)" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
     
 </head>
