--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
        
     </div>
     <br>
-    <script src="js/kim.js"></script>
+    <script src="JS/kim.js"></script>
   <br> <br><br><br>
     <footer>
       <div class="copy">
