--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <div class="me">
      K Ashok <br> Contact:9985854976
-     <img src="images/1.jpeg" alt="">
+     <img src="Images/self.JPG" alt="">
       
     </div>
 
