--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
 </nav>
 
-    <h2 class="h2">Welcome to our World</h2>
+    <h2 class="sone">Welcome to our World</h2>
     <br>
     <br>
     <div class="container">
