--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashok Welding Works</title>
     
-    <link rel="stylesheet" href="CSS/reach.css">
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="CSS/phonereach.css">
+    <link rel="stylesheet" media="screen and (min-width:800px)"  href="CSS/reach.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
     
 </head>
