--- a/services.html
+++ b/services.html
@@ -5,7 +5,8 @@
     <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashok Welding Works</title>
-    <link rel="stylesheet" href="CSS/services.css">
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="CSS/phoneservices.css">
+    <link rel="stylesheet" media="screen and (min-width:800px)"  href="CSS/services.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
     
 </head>
